Changes after review Remove sonar issues
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>